--- a/src/pages/details-item/details-item.html
+++ b/src/pages/details-item/details-item.html
@@ -9,8 +9,13 @@
     <ion-title>
       {{myTitle}}
     </ion-title>
-    <ion-title>
-      {{title}}
+    <ion-title>       
+        {{title}}
+        <ion-buttons end>
+            <button ion-button icon-only (click)="editItem(item)">
+              <ion-icon name="md-create"></ion-icon>
+            </button>
+        </ion-buttons>        
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -18,6 +23,7 @@
 <ion-content>
   <ion-card>
     <ion-card-content>
+      {{id}} 
       {{description}}
     </ion-card-content>
   </ion-card>
