refactored, add tabpage as root

--- a/src/pages/add-item/add-item.html
+++ b/src/pages/add-item/add-item.html
@@ -21,6 +21,11 @@
       <ion-label floating>Description</ion-label>
       <ion-input type="text" [(ngModel)]="description"></ion-input>
     </ion-item>
+
+    <ion-item>      
+      <ion-checkbox [(ngModel)]="complete" disabled></ion-checkbox>
+      <ion-label>Complete</ion-label>          
+    </ion-item>
  
   </ion-list>
  
