--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,28 +4,33 @@
       {{myTitle}}
     </ion-title>
     <ion-buttons end>
-        <button ion-button icon-only (click)="clearItems()">
-          <ion-icon name="cut"></ion-icon>
-        </button>
-      </ion-buttons>
+      <button ion-button icon-only (click)="confirmDeleteAllItems()">
+        <ion-icon name="remove-circle"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-buttons end>
-      <button ion-button icon-only (click)="addItem()"><ion-icon name="add-circle"></ion-icon></button>
+      <button ion-button icon-only (click)="addItem()">
+        <ion-icon name="add-circle"></ion-icon>
+      </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content>    
-    
-    <ion-list>
-      <ion-list-header>
-          to do tasks
-      </ion-list-header>
-      <ion-item *ngFor="let item of items" (click)="viewItem($event,item)">
-          {{item.id}} {{item.title}}<br>
-          <p>{{item.description}}</p>
-          <button ion-button item-end icon-only  (click)="deleteItem($event, item)">
-              <ion-icon name="remove-circle"></ion-icon>              
+<ion-content>        
+  <ion-list>      
+    <ion-item *ngFor="let item of items" (click)="viewItem($event, item)">                                    
+        <ion-label >
+              <span >{{item.id}} {{item.title}}</span>
+              
+        </ion-label>
+        <ion-checkbox [(checked)]="item.complete" (click)="checkComplete($event, item)"></ion-checkbox>
+        <button ion-button icon-only item-end>
+            <ion-icon name="list" light></ion-icon>
           </button>
-      </ion-item>
+    </ion-item>   
   </ion-list>
+
+  
+
 </ion-content>
+
